@@ -1,7 +1,7 @@
 [X] Add Language property to comics
 [X] Comic Manager
 [X] Properties comic dialog
-[X Improve the comic loaging stuff
+[X] Improve the comic loaging stuff
 [X] Remove Edit menu
 [ ] HIGification
 [X] Improve welcome and error messages
